Fixed rem units
I forgot the magic 62.5% number involved in the rems calculation. Now the page doesn't look terrifying anymore.

--- a/less/reset.less
+++ b/less/reset.less
@@ -11,10 +11,10 @@ USE WITH CAUTION AND TEST WITH ABANDON */
 
 .reset() {
     html {
-        font-size: 10px; // 1.0rem = 10px
+        font-size: 62.5%; // 1.0rem = 10px
     }
       
-    html, body, div, span, applet, object, iframe,
+    body, div, span, applet, object, iframe,
     h1, h2, h3, h4, h5, h6, p, blockquote, pre,
     a, abbr, acronym, address, big, cite, code,
     del, dfn, em, img, ins, kbd, q, s, samp,
